dataset1235/2025-2/610742602/users/2447224811/executions/2563853024_2935826613.log
== SUBMISSION (2025-09-02 20:28:12)
-- CODE: 
celsius = float(input("insira a temperatura"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:33:18)
-- CODE: 
celsius = float(input("insira a temperatura"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
insira a temperatura32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
insira a temperatura428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
insira a temperatura105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
insira a temperatura50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
insira a temperatura54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
insira a temperatura104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:28:11)
-- CODE: 
celsius = float(input("insira a temperatura"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:33:16)
-- CODE: 
celsius = float(input("insira a temperatura"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
insira a temperatura32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
insira a temperatura428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
insira a temperatura105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
insira a temperatura50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
insira a temperatura54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
insira a temperatura104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
